# Usecase_MLp_XGBoost

./: README.md  README.md.txt  main.py  pyproject.toml
conf/: conf_functions.py  configuration.yml
src/: data_preprocess_steps.py  finetunning_steps.py  model.py  supp_functions.py
