[tool.poetry]
name = "Usecase_MLp_XGBoost"
version = "0.1.0"
description = "MLp demonstration: build tabular data preprocessing/feature engeenering pipelines + XGB training/finetuning pipelines."
authors = ["Valentin Ozeel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# Add MLp as a dependency with its path
MLp = {path = "./path/to/MLp" "./Coding/Python/my_packages/MLp"}
pyyaml = "^6.0.1"
pathlib= "^1.0.1"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"
numpy = "^1.26.4"
optuna = "^3.5.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
